# SoloDShouse

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMO.md  Makefile  README.md  RUNBOOK.md  pyproject.toml  requirements-dagster.txt  requirements.txt  ruff.toml  runtime_identity.py  skills-lock.json  storage_config.py  task.md
.claude/skills/: dbt  dbt-extras  dbt-migration  gitnexus  mindmap  science-skills
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
.omo/run-continuation/: ses_13a557951ffeNy8pQe8t560tEI.json
agents/: deepagents_proxy.py
agents/tools/: __init__.py
config/: connections.yaml
config/alertmanager/: alertmanager.yml
config/litellm/: config.yaml
config/nginx/: index.html  nginx.conf
config/postgres/: init.sql
config/schemas/: cloud_gpu_pricing.yaml  mlperf_benchmarks.yaml
config/trino/: jvm.config
config/trino/catalog/: hive.properties  iceberg.properties
connections/: __init__.py  auth.py  discovery.py  manager.py  vault.py
dagster/: assets.py  definitions.py  io_managers.py  resources.py
docker/: docker-compose.yml
docker/agent/: Dockerfile
docker/dagster/: Dockerfile
docker/hive-metastore/: entrypoint.sh  metastore-site.xml.template
docker/mlflow/: Dockerfile
docs/: DEMO_RUNBOOK.md  ONBOARDING_READING_ORDER.md  README.md  architecture.md  dataset-governance-naming.md  entity-backup-restore-runbook.md  entity-template-readiness.md  fin-ecb-dax-features-data-contract.md  make-demo-guide.md  medallion-model.md  object-store-abstraction.md  product-entity-contract.md  runtime-state-layout.md  v2.5-acceptance-criteria.md
docs/decisions/: README.md
docs/history/: README.md  architecture-evolution.md  timeline.md
docs/other/: CLAUDE.original.md
docs/restore-drills/: 2026-05-17-entity-template-restore-drill.md  TEMPLATE-iceberg-restore-drill.md
docs/solodshouse/: addocu-tfm-briefing.md
docs/solodshouse/architecture/: C1-system-context.md  C2-containers.md  C3-components-ingestion.md  README.md  data-flow.md  deployment.md  entsoe-api-reference.md  ruflo-integration.md
docs/solodshouse/decisions/: README.md  SDS-002-duckdb-complements-trino.md  SDS-021-evidence-dev-bi.md  SDS-025-kotaemon-rag.md  SDS-028-langfuse-traces-eval.md  SDS-029-monitoring-reduced.md  SDS-030-entso-e-domain.md  SDS-031-pgvector-over-qdrant.md  SDS-033-agt-agent-governance.md  SDS-034-adala-data-labeling.md  SDS-036-orbstack-docker-runtime.md  SDS-037-vps-gateway-role.md  SDS-038-llm-gateway-model-selection.md  SDS-039-pii-detection-presidio.md  SDS-040-dataset-strategy-ai-energy-cost.md  SDS-041-medallion-schema-dbt-design.md  SDS-042-entsoe-historical-data-strategy.md  SDS-043-domain-agnostic-platform.md  SDS-044-connection-layer-dlt.md
docs/solodshouse/sessions/: 2026-06-07-session-01.md
docs/solodshouse/tfm/: architecture-guide.md  context.md  module-coverage.md
docs/sololakehouse_legacy_docs/: ASSESSMENT_LAKEHOUSE_DAX_ECB.md  DAGSTER_GUIDE.md  DEMO_RUNBOOK_EN.md  RELEASE_NOTES_v2.5.0.md  USER_GUIDE.md  USER_GUIDE_EN.md  agent-prompts.md  architecture.md  contributing.md  deployment.md  enterprise-evolution-plan-2026-05-05.md  entity-backup-restore-runbook.md  finlakehouse-deployment-guide.md  finlakehouse-env-template.env  git-workflow.md  governance-v3-matrix.md  governance-v3-runbook.md  make-demo-guide.md  object-store-abstraction.md  project-state-overview-2026-05-05.md  quickstart.md  roadmap.md  runtime-state-layout.md  session-memory.md  v2.5-acceptance-criteria.md  v3-governance-navigation.md  v3-spec.md  vps-deployment-runbook.md  项目现状总览_2026-05-19.md  项目现状总览_2026-05-30.md
docs/sololakehouse_legacy_docs/compliance/: README.md  bafin-bait.md  dora.md  mifid-ii.md
docs/sololakehouse_legacy_docs/decisions/: ADR-001-docker-compose.md  ADR-002-trino-vs-duckdb.md  ADR-003-parquet-vs-delta.md  ADR-004-financial-dataset.md  ADR-005-v1-scope.md  ADR-006-v2-dagster-orchestration.md  ADR-007-v3-k8s-helm-terraform.md  ADR-008-v3-environment-promotion.md  ADR-009-v3-secrets-and-access-governance.md  ADR-010-v3-observability-and-slo.md  ADR-011-v3-ml-productization-boundary.md  ADR-012-v3-data-governance-catalog-strategy.md  ADR-013-iceberg-gold-trino.md  ADR-014-openmetadata-optional-profile.md  ADR-015-v3-observability-tooling.md  ADR-016-compute-engine-migration.md  ADR-017-iceberg-rest-catalog-option.md  ADR-018-ml-lineage-five-tuple.md  ADR-019-minio-seaweedfs-deferral.md  ADR-020-iceberg-all-layers.md  README.md
docs/sololakehouse_legacy_docs/history/: legacy-overview.md  planning-template.md  timeline.md  v2-planning.md  v2.5-planning.md  v2.6-planning.md  v2.7-planning.md  v2.8-planning.md  v2.9-planning.md  v3-planning.md
docs/sololakehouse_legacy_docs/img/: README.md
ingestion/: bronze_writer.py  http.py  iceberg_io.py  iceberg_schemas.py  trino_sql.py
ingestion/collectors/: __init__.py  base.py  cloud_pricing_collector.py  dax_collector.py  dynamic.py  ecb_collector.py  mlperf_collector.py  registry.py
ingestion/schema/: entsoe_records.py  mlperf_records.py  pricing_records.py
ml/: evaluate.py
scripts/: bootstrap-postgres.py  health-server.py  init-iceberg-namespaces.py  init-minio.sh  init-seaweedfs.sh  verify-demo.py  verify-setup.py
tests/: test_auth.py  test_bronze_writer.py  test_cloud_pricing_collector.py  test_collectors.py  test_collectors_ml_and_reports.py  test_connection_manager.py  test_dbt_scaffold.py  test_discovery.py  test_dynamic_collector.py  test_health_server.py  test_mlperf_collector.py  test_runtime_identity.py  test_storage_config.py  test_transformation_runs.py  test_transformations.py  test_trino_sql.py  test_vault.py
tests/integration/: conftest.py  test_bronze_writer_integration.py  test_pipeline_smoke.py
transformations/: dax_bronze_to_silver.py  ecb_bronze_to_silver.py  gpu_tdp_lookup.py  instance_gpu_map.py  mlperf_bronze_to_silver.py  pricing_bronze_to_silver.py  silver_to_gold_features.py
transformations/dbt/: .gitignore  dbt_project.yml  profiles.yml
(+22 files in other folders)
